# blockchain-engineering-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: lab_client.example.json
scripts/: demo.py  mine_genesis.py  node.py  node_runner.py  register_blockchain.py
src/blockchain/: __init__.py  block_utils.py  chain.py  config.py  genesis.py  mempool.py  miner.py
src/blockchain/community/: community.py  handlers.py  payloads.py  sync.py
src/blockchain/core/: block_utils.py  chain.py  fork_manager.py  genesis.py  mempool.py  mempool_sync.py  miner.py  orphan_pool.py
src/blockchain/core/models/: block.py
src/blockchain/models/: genesis.py  mempool.py  mempool_sync.py  orphan_pool.py  transaction.py
src/blockchain/registration/: payloads.py  registration.py
src/blockchain/scripts/: demo.py  mine_genesis.py  node.py
src/lab_group_client/: cache_message_test.py  community.py  config.py  discover_members.py  prepare_session.py  run_rounds.py
src/lab_group_client/blockchain/: __init__.py  block_utils.py  chain.py  miner.py
src/lab_group_client/blockchain/models/: __init__.py  block_header.py
tests/: test_block_primitives.py  test_chain.py  test_chain_block_addition.py  test_chain_consensus_forks.py  test_chain_orphans.py  test_miner.py
